--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,7 +40,9 @@ jobs:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Show build status
-        run: git status
+        shell: cmd
+        run: |
+          git status
 
       - name: Push new files to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
