--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -4,13 +4,13 @@ name: Generate Snake
 # Controls when the action will run.
 on:
   schedule:
-    # every 12 hours
+      # every 12 hours
     - cron: "0 */12 * * *"
 
   # This command allows us to run the Action automatically from the Actions tab.
   workflow_dispatch:
   
-  # Also run on every push on the main branch
+  # Also run on every push on the master branch
   push:
     branches:
     - main
@@ -20,7 +20,7 @@ jobs:
   # This workflow contains a single job called "build"
   build:
     # The type of runner that the job will run on
-    runs-on: windows-latest
+    runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
@@ -40,9 +40,7 @@ jobs:
            GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
       - name: Show build status
-        shell: cmd
-        run: |
-          git status
+        run: git status
 
       - name: Push new files to the output branch
         uses: crazy-max/ghaction-github-pages@v3.1.0
